...
                rowInformationHeader = R.string.user_profile_first_name_header,
                rowInformation = userProfileViewModel.userProfileFirstName.value,
                remainingCharacterAmount = userProfileViewModel.getRemainingCharacterAmountFirstName(),
                isInformationExpanded = isCardExpanded,
                isEditingUserProfile = userProfileViewModel.isEditingUserProfile.value,
                onTextChange = { userProfileViewModel.setUserProfileFirstName(it) },
                testTag = "userProfileInputRowFirstName"
            )
            UserProfileLayoutRow(
                rowInformationHeader = R.string.user_profile_last_name_header,
                rowInformation = userProfileViewModel.userProfileLastName.value,
                remainingCharacterAmount = userProfileViewModel.getRemainingCharacterAmountLastName(),
                isInformationExpanded = isCardExpanded,
                isEditingUserProfile = userProfileViewModel.isEditingUserProfile.value,
                onTextChange = { userProfileViewModel.setUserProfileLastName(it) },
                testTag = "userProfileInputRowLastName"
            )
            UserProfileLayoutRow(
                rowInformationHeader = R.string.user_profile_biography_header,
                rowInformation = userProfileViewModel.userProfileBiography.value,
                remainingCharacterAmount = userProfileViewModel.getRemainingCharacterAmountBiography(),
                isInformationExpanded = isCardExpanded,
                isEditingUserProfile = userProfileViewModel.isEditingUserProfile.value,
                onTextChange = { userProfileViewModel.setUserProfileBiography(it) },
                testTag = "userProfileInputRowBiography"
            )
        }
        Spacer(
            modifier = Modifier
                .height(dimensionResource(id = R.dimen.user_profile_spacer_height))
        )
...
        modifier = modifier
            .fillMaxWidth()
    ) {
        Button(
            onClick = onEditButtonClick,
            modifier = Modifier
                .testTag("userProfileEditButton")
        ) {
            Text(
                // Set the text depending on if the user is currently editing their profile
                text = stringResource(
                    id =
                    when (isEditingUserProfile) {
...
        }
        // Only display the edit canceling button when editing the user profile
        if (isEditingUserProfile){
            Button(
                onClick = onDiscardEditButtonClick,
                modifier = Modifier
                    .testTag("userProfileDiscardButton")
            ){
                Text(
                    text = stringResource(id = R.string.user_profile_cancel_editing_message)
                )
            }
        }
...
